Changes in 3.6.0
2015-MM-DD

- New things:
- Improvements:
- C++ API changes:
  - Automatic memory management for GeometryFactory objects


Changes in 3.5.0
2015-08-16

- New things:
  - Voronoi API (#627)
  - PHP: Geometry->normalize method
  - GEOS_USE_ONLY_R_API macro support (#695)
  - PHP: WKBReader->read() & WKBWriter::write() methods (Benjamin Morel)
  - GEOSClipByRect (#699, Mika Heiskanen, Sandro Santilli)
  - CAPI: thread-safe message handling API (#663, Pepijn Van Eeckhoudt)
- Improvements:
  - Speed-up intersection and difference between geometries
    with small bounding box overlap.
  - CAPI: add MULTILINESTRING support for GEOSisClosed (Benjamin Morel)
- C++ API changes:
  - Added no-parameter CoordinateSequenceFactory::create method (Sandro Mani)

Changes in 3.4.2
2013-08-25

- Bug fixes / improvements
  - Use a double for PrecisionModel scale, avoiding overflows 
    should fix 32-bit regression failures (#652)
  - isnan workaround OS detection missing NetBSD, DragonFly, Sun nuance (#650)
  - Do not distribute platform.h and version.h, but install both (#601)
  - Non-standard ChangeLog file in 3.4.0 and 3.4.1 releases (#654) 
  - new travis bot (#657)
  - accept multiple Nan representations (#656)
		

Changes in 3.4.1
2013-08-17

- Bug fixes / improvements
  - Assertion failure snapping line to points of rectangle
    smaller than tolerance (#649)
  - Can't build using cmake with tar ball (#644)

Changes in 3.4.0
2013-08-11

- New things:
  - Delaunay Triangulation API (#487, #565, #570, #567)
  - Interruptibility API (C and C++)
  - CAPI: GEOSNode (#496) - PHP: Geometry->node
  - GeometryPrecisionReducer class (#496, #526)
  - BufferInputLineSimplifier header exposed (#548)
  - New Centroid class supporting mixed geometry components (#612)
  - io::Writer::reserve() method
  - CAPI: GEOSNearestPoints
  - Add --cclibs, --static-clibs and --static-cclibs to geos-config (#497)
  - Early bail out of overlay exception if input is invalid
