@@ -2,7 +2,9 @@ Changes in 3.6.0
 2015-MM-DD
 
 - New things:
+  - CAPI: GEOSGeom_setPrecision (#713) - PHP: Geometry->setPrecision
 - Improvements:
+  - ...
 - C++ API changes:
   - Automatic memory management for GeometryFactory objects
 
